// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav/> Renders and minimal nav when signed out 1`] = `
<div>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      Products
      <span
        class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
      />
    </div>
  </button>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      Sign In
      <span
        class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
      />
    </div>
  </button>
</div>
`;

exports[`<Nav/> renders a full nav when signed in 1`] = `
<div>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      <span>
        Products
        <span
          class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
        />
      </span>
    </div>
  </button>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      sell
      <span
        class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
      />
    </div>
  </button>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      Orders
      <span
        class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
      />
    </div>
  </button>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      Account
      <span
        class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
      />
    </div>
  </button>
  <button
    class=" uppercase relative group px-4 text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      <span
        class="flex items-center space-x-2"
      >
        <span>
          My Cart
          <span
            class="absolute w-full h-1 bg-slick -bottom-1 left-0 rounded-sm transform scale-x-0 group-hover:scale-x-100 transition ease-bloop duration-400 group-hover:bg-slick"
          />
        </span>
        <span
          class="bg-slick text-white h-8 w-8 rounded-full flex items-center justify-center"
        >
          <div>
            <div
              class="count"
            >
              0
            </div>
          </div>
        </span>
      </span>
    </div>
  </button>
  <button
    class="relative h-7 uppercase text-sm lg:px-6 lg:text-lg xl:px-8 xl:text-xl flex items-center"
    type="button"
  >
    <div>
      <div
        class="absolute top-0 left-0 w-0.5 h-full bg-gray-200 transform -skew-x-20"
      />
      <span
        class="hover:text-slick"
      >
        Sign Out!
      </span>
    </div>
  </button>
</div>
`;
